[package]
name = "time-lapse"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.23.5"
gstreamer-video = "0.20"
glib = "0.20"
